Fix button overflow on smaller screens

--- a/frontend/src/components/Button/index.module.scss
+++ b/frontend/src/components/Button/index.module.scss
@@ -1,5 +1,6 @@
 .button {
-  min-width: 335px;
+  width: 100%;
+  max-width: 335px;
   padding: 20px;
   font-family: var(--font-family-body);
   font-size: var(--font-size-xs);
